# Meridian-Academy

./: .gitignore  README.md  metadata.json  trajectory.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md
repo/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  run_tests.sh
repo/API_tests/: Cargo.toml
repo/API_tests/src/: flows.rs  lib.rs  security.rs
repo/backend/: Cargo.toml  Dockerfile  Rocket.toml
repo/backend/src/: lib.rs  main.rs  notifications.rs
repo/backend/src/middleware/: auth_guard.rs  mod.rs
repo/backend/src/migrations/: 001_initial.sql  002_seed.sql
repo/backend/src/models/: auth.rs  case.rs  content.rs  mod.rs  order.rs  payment.rs  review.rs  submission.rs  user.rs
repo/backend/src/routes/: admin.rs  auth.rs  cases.rs  content.rs  health.rs  mod.rs  orders.rs  payments.rs  reviews.rs  submissions.rs  users.rs
repo/docs/: api-spec.md
repo/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
repo/frontend/assets/: style.css
repo/frontend/src/: formatting.rs  lib.rs  main.rs  nav_logic.rs  status_display.rs  validation.rs
repo/frontend/src/components/: layout.rs  nav.rs
repo/frontend/src/pages/: admin.rs  cases.rs  mod.rs  orders.rs  profile.rs  reviews.rs  submissions.rs
repo/frontend/src/services/: api.rs  auth.rs
repo/frontend_tests/: Cargo.toml
repo/frontend_tests/src/: contracts.rs  frontend_formatting_tests.rs  frontend_nav_tests.rs  frontend_page_integration_tests.rs  frontend_status_tests.rs  frontend_validation_tests.rs  lib.rs  ui_logic.rs
repo/unit_tests/: Cargo.toml
repo/unit_tests/src/: domain_rules.rs  lib.rs  security.rs
sessions/: bugfix-1.json  bugfix-2.json
