[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde", "js"] }
gloo-net = "0.5"
gloo-storage = "0.3"
gloo-file = "0.3"
base64 = "0.21"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
log = "0.4"
wasm-logger = "0.2"
