[package]
name = "frontend_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../backend" }
frontend = { path = "../frontend", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
