[package]
name = "unit_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../backend" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bcrypt = "0.15"
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
slug = "0.1"
base64 = "0.22"
